Added login functionality and all tests related to it. Added Button component

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "i18next": "^21.5.3",
     "msw": "^0.35.0",
+    "prop-types": "^15.8.0",
     "react-i18next": "^11.14.3"
   },
   "proxy": "http://localhost:8080"
